# dynstr

./: .gitignore  CMakeLists.txt  Makefile  dynstr.c  dynstr.pc
include/: dynstr.h
